# discord-jdr-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  config.example.json  installer.bat  launcher_bot.bat  main.py  pyproject.toml  requirements.txt  test_dice.py
.github/workflows/: ci.yml
bot/cogs/: character.py  creation.py  dice.py  racial.py  rest.py  spell.py
bot/models/: __init__.py  character.py
bot/utils/: dice_parser.py
compendium/_schemas/: .gitkeep
compendium/dnd5e/: config.yaml  manifest.yaml
compendium/schemas/: class-mechanics.schema.json  race-mechanics.schema.json
data/characters/: characters.20260702_124723.bak.json
docs/: ARCHITECTURE_V2.md  COMBAT_ROLL_PREREQUISITES.md  MIGRATION.md  SPELLS_B2_MIGRATION_NOTES.md  SPELLS_INVENTORY.md  SPELL_SCHEMA.md
docs/adr/: ADR-001 - Pourquoi un Rule Engine.md  ADR-002 - Pourquoi les règles sont externalisées.md  ADR-003 - Pourquoi utiliser un EventBus.md  README.md
fixtures/characters/: joe_le_mage.v2.json  marie_la_pretresse.v2.json
interfaces/: __init__.py
interfaces/discord/: __init__.py  container.py  settings.py  startup.py
jdr_engine/: __init__.py
jdr_engine/application/: __init__.py  character_service.py
jdr_engine/compendium/: __init__.py  entry.py  loader.py  mechanics_schema.py  paths.py  presenter.py  registry.py  srd_importer.py  validator.py
jdr_engine/core/: __init__.py
plugins/: .gitkeep
scripts/: seed_joe_le_mage.py  seed_marie_la_pretresse.py
tools/: import_srd_mechanics.py  migrate_persistence.py  migrate_spells_b2.py  validate_compendium.py
(+383 files in other folders)
