[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jdr-engine"
version = "0.1.0"
description = "Moteur de jeu de rôle modulaire — indépendant de Discord"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jdr_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
